--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = ">=3.11.0,<3.12"
 openai = "^1.28.2"
+flask = "^3.1.0"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
