--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = ">=3.11.0,<3.12"
 openai = "^1.28.2"
 flask = "^3.1.0"
 newsapi = "^0.1.1"
+newsapi-python = "^0.2.7"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
