--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^3.1.0"
 newsapi = "^0.1.1"
 newsapi-python = "^0.2.7"
 telegram = "^0.0.1"
+python-telegram-bot = "^21.10"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
