Assistant checkpoint: Configure logging and suggest token security measures
Assistant generated file changes:
- main.py: Add logging configuration

---

User prompt:

In the shell, I see the following:

```
s "HTTP/1.1 200 OK"
INFO:httpx:HTTP Request: POST https://api.telegram.org/bot8056875181:AAEGN9bKuERji845GzjxL3tjrd-MKLe8L6k/getUpdates "HTTP/1.1 200 OK"
INFO:httpx:HTTP Request: POST https://api.telegram.org/bot8056875181:AAEGN9bKuERji845GzjxL3tjrd-MKLe8L6k/getUpdates "HTTP/1.1 200 OK"
INFO:httpx:HTTP Request: POST https://api.telegram.org/bot8056875181:AAEGN9bKuERji845GzjxL3tjrd-MKLe8L6k/getUpdates "HTTP/1.1 200 OK"
INFO:httpx:HTTP Request: POST https://api.telegram.org/bot8056875181:AAEGN9bKuERji845GzjxL3tjrd-MKLe8L6k/getUpdates "HTTP/1.1 200 OK"
INFO:httpx:HTTP Request: POST https://api.telegram.org/bot8056875181:AAEGN9bKuERji845GzjxL3tjrd-MKLe8L6k/getUpdates "HTTP/1.1 200 OK"
INFO:httpx:HTTP Request: POST https://api.telegram.org/bot8056875181:AAEGN9bKuERji845GzjxL3tjrd-MKLe8L6k/getUpdates "HTTP/1.1 200 OK"
INFO:httpx:HTTP Request: POST https://api.telegram.org/bot8056875181:AAEGN9bKuERji845GzjxL3tjrd-MKLe8L6k/getUpdates "HTTP/1.1 200 OK"
INFO:httpx:HTTP Request: POST https://api.telegram.org/bot8056875181:AAEGN9bKuERji845GzjxL3tjrd-MKLe8L6k/getUpdates "HTTP/1.1 200 OK"
INFO:httpx:HTTP Request: POST https://api.telegram.org/bot8056875181:AAEGN9bKuERji845GzjxL3tjrd-MKLe8L6k/getUpdates "HTTP/1.1 200 OK"
^CINFO:httpx:HTTP Request: POST https://api.telegram.org/bot8056875181:AAEGN9bKuERji845GzjxL3tjrd-MKLe8L6k/getUpdates "HTTP/1.1 200 OK"
INFO:telegram.ext.Application:Application is stopping. This might take a moment.
INFO:telegram.ext.Application:Application.stop() complete
```

If applicable, propose a fix immediately.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ newsapi = "^0.1.1"
 newsapi-python = "^0.2.7"
 python-telegram-bot = "^20.7"
 telegram = "^0.0.1"
+linkedin-api = "^2.3.1"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
