--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ newsapi-python = "^0.2.7"
 python-telegram-bot = "^20.7"
 telegram = "^0.0.1"
 linkedin-api = "^2.3.1"
+requests = "^2.32.3"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
