--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ newsapi = "^0.1.1"
 newsapi-python = "^0.2.7"
 python-telegram-bot = "^20.7"
 telegram = "^0.0.1"
-linkedin-api = "^2.3.1"
+linkedin-api-client = "^0.1.0"
 requests = "^2.32.3"
 
 [tool.poetry.dev-dependencies]
