--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-telegram-bot = "^20.7"
 telegram = "^0.0.1"
 linkedin-api-client = "^0.1.0"
 requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
